--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=simpleRGBLED
-version=1.0.1
+version=1.0.2
 author=dliebs, Devin Lieberman
 maintainer=dliebs
-sentence=A sentence.
-paragraph=An explanation.
+sentence=A simple LED library.
+paragraph=It was simpler to write my own for my needs!
 category=Communication
 url=https://github.com/dliebs/XXXXXXXXX.git
 architectures=esp8266,esp32
